photos in photo albums have been added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         <activity
             android:name=".activities.ActivityUserProfile" />
         
-        <activity android:name=".activities.ActivityListPhotos" />
+        <activity android:name=".activities.ActivityListPhotoAlbums" />
     </application>
 
 </manifest>
