view pager for photos has been added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
         <activity
             android:name=".activities.ActivityUserProfile" />
 
+        <activity android:name=".activities.ActivityPhotoPager"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
