base activity has been added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,12 @@
 
         <activity android:name=".activities.ActivityPhotoPager"
             android:theme="@style/AppTheme.NoActionBar"/>
+        
+        <receiver android:name=".receivers.NetworkChangeBroadcastReceiver">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
