layout of all mesages have been separated

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,7 @@
         <service android:name=".services.UpdateService" />
 
         <activity
-            android:name=".activities.ActivityChat"
-            android:windowSoftInputMode="adjustResize" />
+            android:name=".activities.ActivityChat" />
         
         <activity
             android:name=".activities.ActivityUserProfile" />
